# hermes-plugin-kimi-code-acp

./: .gitignore  CHANGELOG.md  README.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
kimi_code_acp/: __init__.py  backend.py  config.py  delegation.py  runtime.py  session_meta.py  tool.py
tests/: test_backend.py  test_config.py  test_core_approval_bridge.py  test_delegation_provider.py  test_plugin_registration.py  test_runtime_provider.py  test_session_meta.py
